fixed form control alignment

--- a/src/components/auth/Form.css
+++ b/src/components/auth/Form.css
@@ -155,8 +155,9 @@
   height: 234px;
 }
 
-.EditProfile__applicant textarea {
-  height: 279px;
+.EditProfile__applicant textarea,
+.RegisterForm__applicant textarea {
+  height: 280px;
 }
 
 .form-group textarea:focus {
